--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,7 @@
 export spark_master=<master_ip>:<port>
-
+export executor_cores=8
+export total_executor_cores=60
+export executor_memory=25G
+export num_executors=8
+export driver_memory=50GB
+export shuffle_partitions=128
