--- a/config.properties
+++ b/config.properties
@@ -3,5 +3,5 @@ export executor_cores=8
 export total_executor_cores=60
 export executor_memory=25G
 export num_executors=8
-export driver_memory=50GB
+export driver_memory=50G
 export shuffle_partitions=128
